Using pandoc & removed GitHub header

--- a/CV.css
+++ b/CV.css
@@ -2,10 +2,10 @@
 /*     text-align: center */
 /* } */
 
-.org-center {
-    text-align: center
-}
+/* .org-center { */
+/*     text-align: center */
+/* } */
 
-body {
-    margin: 8%
-}
+/* body { */
+/*     margin: 8% */
+/* } */
