--- a/CV.css
+++ b/CV.css
@@ -9,3 +9,15 @@
 /* body { */
 /*     margin: 8% */
 /* } */
+
+h1, h2, p, li {
+    font-family: Fira Sans;
+}
+
+a {
+    font-family: Iosevka;
+}
+
+/* p { */
+/*     font-family: Iosevka; */
+/* } */
